# pywiscat

./: LICENSE.md  README.md  pyproject.toml  pywiscat.env  requirements.txt  setup.py
.github/workflows/: main.yml
pywiscat/: __init__.py  cli_helpers.py  env.py  util.py
pywiscat/wis1/: __init__.py  catalogue.py  report.py  util.py
pywiscat/wis2/: __init__.py  archive.py  catalogue.py  metrics.py
tests/: run_tests.py
tests/data/: de.dkrz.wdcc.iso2000013.xml  de.dwd.mosmix.07100.xml  de.pangaea.dataset667603.xml  small_list.json  urn_x-wmo_md_br.gov.inmet__model.mbar.precipitation6h.south-america.xml  urn_x-wmo_md_ch.meteoswiss.nc__IUPD42LSSW.xml  urn_x-wmo_md_fr.meteo.dcpc-copernicus__chimere_europe_0.1deg_forecast_alllevels_SO2_73H_96H_1h_NetCDF.xml  urn_x-wmo_md_fr.meteo__AROME_0.025_HP3_31H36H.xml  urn_x-wmo_md_fr.meteo__ARPEGE_0.5_HP1_00H24H.xml  urn_x-wmo_md_int.ecmwf__HRXG00ECMF.xml
