[build-system]
requires = ["setuptools>=46.4", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pywiscat"
version = "0.4.dev0"
description = "WMO WIS Catalogue Python client"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE.md"]
keywords = ["WMO", "WIS2"]
authors = [
    {name = "Tom Kralidis", email = "tomkralidis@gmail.com"}
]
maintainers = [
    {name = "Tom Kralidis", email = "tomkralidis@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Information Analysis"
]
dependencies = [
    "click",
    "emoji-country-flag",
    "iso3166",
    "jsondiff",
    "prettytable",
    "pywcmp",
    "requests"
]

[project.optional-dependencies]
dev = ["flake8"]
release = ["build", "twine", "wheel"]

[project.scripts]
pywiscat = "pywiscat:cli"

[project.urls]
homepage = "https://github.com/World-Meteorological-Organization/pywiscat"
source = "https://github.com/World-Meteorological-Organization/pywiscat"
documentation = "https://github.com/World-Meteorological-Organization/pywiscat"
issues = "https://github.com/World-Meteorological-Organization/pywiscat/issues"
